sna: Use physical output size from the kernel

We have a conflict between Xorg and the kernel, once again, over the
meaning of the EDID. Since the kernel supplies us with the physical size
of the connector, let's place the burden of trust on the kernel and
ignore the quirky behaviour of Xorg.

Suggested-by: Ville Syrjälä <ville.syrjala@linux.intel.com>
References: https://bugs.freedesktop.org/show_bug.cgi?id=96255
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>